not important changes

--- a/run.ipynb
+++ b/run.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Start:\t 2024-10-03 09:58:15.724003 \n",
+      "Start:\t 2024-10-09 07:51:37.912017 \n",
       "\n",
       "Warning: Grammar contains unit production for production rule <fc>\n",
       "         Unit productions consume GE codons.\n",
@@ -31,95 +31,37 @@
       "         Unit productions consume GE codons.\n",
       "Warning: Grammar contains unit production for production rule <callf>\n",
       "         Unit productions consume GE codons.\n",
+      "Warning: Grammar contains unit production for production rule <var>\n",
+      "         Unit productions consume GE codons.\n",
       "Evolution: 0% complete\n",
       "Evolution: 50% complete\n",
       "Evolution: 50% complete\n",
       "\n",
       "\n",
       "Best:\n",
-      "  Fitness:\t 999\n",
-      "  Phenotype: def fun(price_data):\n",
+      "  Fitness:\t -90.38269755886697\n",
+      "  Phenotype: open_prices = price_data['open']\n",
+      "close_prices = price_data['close']\n",
+      "high_prices = price_data['high']\n",
+      "low_prices = price_data['low']\n",
+      "volume = price_data['volume']\n",
+      "def fun(open_prices, close_prices, high_prices, low_prices, volume):\n",
       "  import pandas as pd\n",
       "  import numpy as np\n",
-      "  from fitness.indicators import indicators\n",
+      "  from fitness.indicators import numba_indicators\n",
+      "  from fitness.performance.helper_func import merge_pnl, get_drawdowns, get_pnl, trading_signals\n",
       "  from numba import njit\n",
       "  COMMISSION = 0.015\n",
-      "  SLIPPAGE = 0.05\n",
+      "  SLIPPAGE = 0.00005\n",
       "  AVAILABLE_CAPITAL = 700000\n",
       "  TRADE_SIZE = 0.5\n",
-      "  @njit\n",
-      "  def merge_pnl(arr1, arr2):\n",
-      "    out = np.zeros((len(arr1) + len(arr2)))\n",
-      "    idx = 1\n",
-      "    for i in range(len(arr1) + len(arr2)):\n",
-      "      if i % 2 == 0:\n",
-      "        out[i] = arr1[int(i/2)]\n",
-      "      else:\n",
-      "        out[i] = arr2[i-idx]\n",
-      "      idx += 1\n",
-      "    return out\n",
-      "  @njit\n",
-      "  def get_drawdowns(arr):\n",
-      "    drawdowns = np.zeros((len(arr)))\n",
-      "    max = arr[0]\n",
-      "    for i in range(1, len(drawdowns)-1):\n",
-      "      if arr[i-1] > arr[i] and arr[i] < arr[i+1]:\n",
-      "        min = arr[i]\n",
-      "        drawdowns[i] = max - min\n",
-      "      elif arr[i-1] < arr[i] and arr[i] > arr[i+1]:\n",
-      "        max = arr[i]\n",
-      "    return drawdowns\n",
-      "  @njit\n",
-      "  def get_pnl(trade_close_prices, trade_open_prices, commission, slippage, init_inv, trade_size, is_buy):\n",
-      "    pnl_list = np.zeros(len(trade_close_prices))\n",
-      "    for i in range(len(trade_close_prices)):\n",
-      "      temp_n_assets = int(init_inv * trade_size / trade_open_prices[i])\n",
-      "      if is_buy == 1:\n",
-      "        temp_pnl = temp_n_assets * (trade_close_prices[i] - trade_open_prices[i] * (1 + slippage))\n",
-      "      else:\n",
-      "        temp_pnl = -temp_n_assets * (trade_close_prices[i] - trade_open_prices[i] * (1 - slippage))\n",
-      "      temp_pnl = temp_pnl * (1 - commission)\n",
-      "      init_inv += temp_pnl\n",
-      "      pnl_list[i] = temp_pnl\n",
-      "    return pnl_list\n",
-      "  df = price_data.copy()\n",
-      "  for i in range(1, 6):\n",
-      "    df[f'close_{i}'] = df['close'].shift(i)\n",
-      "    df[f'open_{i}'] = df['open'].shift(i)\n",
-      "    df[f'high_{i}'] = df['high'].shift(i)\n",
-      "    df[f'low_{i}'] = df['low'].shift(i)\n",
-      "    df[f'volume_{i}'] = df['volume'].shift(i)\n",
-      "  df.dropna(inplace=True)\n",
-      "  df.reset_index(drop=True, inplace=True)\n",
-      "  df['buy'] = ((df['high_2'].values.reshape(-1, 1) >= df['high_3'].values.reshape(-1, 1)) & (df['close_2'].values.reshape(-1, 1) < df['low_2'].values.reshape(-1, 1))).astype(int)\n",
-      "  df['sell'] = ((df['volume_3'].values.reshape(-1, 1) != df['close_2'].values.reshape(-1, 1)) | (df['low'].values.reshape(-1, 1) > df['close_4'].values.reshape(-1, 1))).astype(int)\n",
-      "  df['signal'] = df['buy'] + df['sell']\n",
-      "  df['signal'] = df['signal'].apply(lambda x: 1 if x==1 else 0)\n",
-      "  df['sell'] = df['sell'] * (-1)\n",
-      "  df['signal'] = df['signal'] * df['sell']\n",
-      "  df['signal'] = df['signal'] + df['buy']\n",
-      "  df.drop(columns=['buy', 'sell'], inplace=True)\n",
-      "  buy_idxs = []\n",
-      "  sell_idxs = []\n",
-      "  is_buy = 0\n",
-      "  is_sell = 0\n",
-      "  for i, row in enumerate(df.itertuples()):\n",
-      "    if row.signal == 1 and is_buy == 0:\n",
-      "      buy_idxs.append(i+1)\n",
-      "      is_buy = 1\n",
-      "      is_sell = 0\n",
-      "    elif row.signal == -1 and is_sell == 0:\n",
-      "      sell_idxs.append(i+1)\n",
-      "      is_sell = 1\n",
-      "      is_buy = 0\n",
-      "  if len(buy_idxs) > len(sell_idxs):\n",
-      "    buy_idxs = buy_idxs[:-(len(buy_idxs) - len(sell_idxs))]\n",
-      "  elif len(buy_idxs) < len(sell_idxs):\n",
-      "    sell_idxs = sell_idxs[:-(len(sell_idxs) - len(buy_idxs))]\n",
+      "  buy_idxs, sell_idxs = trading_signals(buy_signal=numba_indicators.balance_of_power(close=close_prices, low=low_prices, high=high_prices) <= numba_indicators.intraday_intensity(high=high_prices, low=low_prices, close=close_prices, volume=volume), sell_signal=numba_indicators.chaikin_ad_line(close=close_prices, low=low_prices, high=high_prices, volume=volume) >= numba_indicators.hilbert_phasor_components(close=close_prices)[:, 1])\n",
       "  if len(buy_idxs) == 0 or len(sell_idxs) == 0:\n",
       "    return 999\n",
-      "  buy_prices = df[df.index.isin(buy_idxs)]['open'].values\n",
-      "  sell_prices = df[df.index.isin(sell_idxs)]['open'].values\n",
+      "  buy_idxs = np.array(buy_idxs)\n",
+      "  sell_idxs = np.array(sell_idxs)\n",
+      "  buy_prices = open_prices[np.isin(np.arange(len(open_prices)), buy_idxs)]\n",
+      "  sell_prices = open_prices[np.isin(np.arange(len(open_prices)), sell_idxs)]\n",
       "  if buy_idxs[0] < sell_idxs[0]:\n",
       "    buy_arr = get_pnl(sell_prices, buy_prices, COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 1)\n",
       "    buy_pnl = np.sum(buy_arr)\n",
@@ -133,45 +75,49 @@
       "    buy_pnl = np.sum(buy_arr)\n",
       "    all_arr = merge_pnl(sell_arr, buy_arr)\n",
       "  total_pnl = buy_pnl + sell_pnl\n",
+      "  if total_pnl <= 0:\n",
+      "    return 999\n",
       "  equity_curve_arr = np.cumsum(all_arr)\n",
       "  drawdowns = get_drawdowns(equity_curve_arr)\n",
+      "  if len(drawdowns[drawdowns!=0]) == 0:\n",
+      "    return 999\n",
       "  avg_drawdown = np.sum(drawdowns[drawdowns!=0]) / len(drawdowns[drawdowns!=0])\n",
       "  fitness = total_pnl / avg_drawdown\n",
       "  if np.isnan(fitness):\n",
       "    return 999\n",
       "  return -fitness\n",
-      "fitness = fun(data)\n",
-      "  Genome: [38797, 90441, 47674, 73378, 60793, 44138, 80210, 64649, 57257, 56073, 48284, 70428, 74029, 12245, 41267, 62023, 59508, 62230, 85584, 5781, 93250, 60762, 75470, 60270, 88805, 41779, 5089, 23889, 28007, 84917, 74076, 31190, 5837, 8719]\n",
+      "fitness = fun(open_prices, close_prices, high_prices, low_prices, volume)\n",
+      "  Genome: [44340, 30525, 33210, 87602, 49887, 42558, 41202, 20635, 76767, 68523, 48391, 92725, 70233, 74374, 58887, 82052, 85794, 88428, 24742, 79470, 90562, 54239]\n",
       "______\n",
       "\n",
-      "  ave_fitness : \t 999.0\n",
-      "  ave_genome_length : \t 49.85\n",
+      "  ave_fitness : \t 781.8396252529002\n",
+      "  ave_genome_length : \t 50.9\n",
       "  ave_tree_depth : \t 7.5\n",
-      "  ave_tree_nodes : \t 41.125\n",
-      "  ave_used_codons : \t 26.125\n",
-      "  best_fitness : \t 999\n",
+      "  ave_tree_nodes : \t 39.72222222222222\n",
+      "  ave_used_codons : \t 26.944444444444443\n",
+      "  best_fitness : \t -90.38269755886697\n",
       "  gen : \t 1\n",
-      "  invalids : \t 4\n",
-      "  max_genome_length : \t 177\n",
-      "  max_tree_depth : \t 8.0\n",
-      "  max_tree_nodes : \t 53.0\n",
-      "  max_used_codons : \t 34.0\n",
-      "  min_genome_length : \t 15\n",
+      "  invalids : \t 3\n",
+      "  max_genome_length : \t 87\n",
+      "  max_tree_depth : \t 10.0\n",
+      "  max_tree_nodes : \t 76.0\n",
+      "  max_used_codons : \t 52.0\n",
+      "  min_genome_length : \t 22\n",
       "  min_tree_depth : \t 6.0\n",
-      "  min_tree_nodes : \t 26.0\n",
-      "  min_used_codons : \t 17.0\n",
-      "  runtime_error : \t 19\n",
+      "  min_tree_nodes : \t 22.0\n",
+      "  min_used_codons : \t 15.0\n",
+      "  runtime_error : \t 0\n",
       "  time_adjust : \t 0\n",
-      "  time_taken : \t 82.5571973323822\n",
+      "  time_taken : \t 19.519505500793457\n",
       "  total_inds : \t 40\n",
-      "  total_time : \t 141.68285465240479\n",
+      "  total_time : \t 44.324681758880615\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "! python ponyge.py --fitness_function max_fitness --grammar_file btc_ohlcv_lags.pybnf --population_size 20 --generations 1"
+    "! python ponyge.py --fitness_function max_fitness_numba --grammar_file btc_ind_numba.pybnf --population_size 20 --generations 1"
    ]
   },
   {
@@ -184,7 +130,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "crypto_trading",
+   "display_name": "grammar_evol",
    "language": "python",
    "name": "python3"
   },
