not important changes

--- a/run.ipynb
+++ b/run.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Start:\t 2024-10-09 07:51:37.912017 \n",
+      "Start:\t 2024-10-09 10:05:54.397925 \n",
       "\n",
       "Warning: Grammar contains unit production for production rule <fc>\n",
       "         Unit productions consume GE codons.\n",
@@ -31,15 +31,13 @@
       "         Unit productions consume GE codons.\n",
       "Warning: Grammar contains unit production for production rule <callf>\n",
       "         Unit productions consume GE codons.\n",
-      "Warning: Grammar contains unit production for production rule <var>\n",
-      "         Unit productions consume GE codons.\n",
       "Evolution: 0% complete\n",
       "Evolution: 50% complete\n",
       "Evolution: 50% complete\n",
       "\n",
       "\n",
       "Best:\n",
-      "  Fitness:\t -90.38269755886697\n",
+      "  Fitness:\t -2476.5354183914997\n",
       "  Phenotype: open_prices = price_data['open']\n",
       "close_prices = price_data['close']\n",
       "high_prices = price_data['high']\n",
@@ -49,13 +47,14 @@
       "  import pandas as pd\n",
       "  import numpy as np\n",
       "  from fitness.indicators import numba_indicators\n",
-      "  from fitness.performance.helper_func import merge_pnl, get_drawdowns, get_pnl, trading_signals\n",
+      "  from fitness.performance.helper_func import merge_pnl, get_drawdowns, get_pnl, trading_signals, get_lag\n",
       "  from numba import njit\n",
       "  COMMISSION = 0.015\n",
       "  SLIPPAGE = 0.00005\n",
       "  AVAILABLE_CAPITAL = 700000\n",
       "  TRADE_SIZE = 0.5\n",
-      "  buy_idxs, sell_idxs = trading_signals(buy_signal=numba_indicators.balance_of_power(close=close_prices, low=low_prices, high=high_prices) <= numba_indicators.intraday_intensity(high=high_prices, low=low_prices, close=close_prices, volume=volume), sell_signal=numba_indicators.chaikin_ad_line(close=close_prices, low=low_prices, high=high_prices, volume=volume) >= numba_indicators.hilbert_phasor_components(close=close_prices)[:, 1])\n",
+      "  MAX_LAG = 5\n",
+      "  buy_idxs, sell_idxs = trading_signals(buy_signal=get_lag(open_prices, lag=4)[MAX_LAG:] <= get_lag(open_prices, lag=3)[MAX_LAG:], sell_signal=get_lag(low_prices, lag=3)[MAX_LAG:] == get_lag(high_prices, lag=1)[MAX_LAG:])\n",
       "  if len(buy_idxs) == 0 or len(sell_idxs) == 0:\n",
       "    return 999\n",
       "  buy_idxs = np.array(buy_idxs)\n",
@@ -87,37 +86,37 @@
       "    return 999\n",
       "  return -fitness\n",
       "fitness = fun(open_prices, close_prices, high_prices, low_prices, volume)\n",
-      "  Genome: [44340, 30525, 33210, 87602, 49887, 42558, 41202, 20635, 76767, 68523, 48391, 92725, 70233, 74374, 58887, 82052, 85794, 88428, 24742, 79470, 90562, 54239]\n",
+      "  Genome: [29144, 20380, 16187, 78671, 78411, 32716, 94261, 75719, 56740, 61537, 75528, 90720, 53507, 88188, 50623, 10790]\n",
       "______\n",
       "\n",
-      "  ave_fitness : \t 781.8396252529002\n",
-      "  ave_genome_length : \t 50.9\n",
-      "  ave_tree_depth : \t 7.5\n",
-      "  ave_tree_nodes : \t 39.72222222222222\n",
-      "  ave_used_codons : \t 26.944444444444443\n",
-      "  best_fitness : \t -90.38269755886697\n",
+      "  ave_fitness : \t 538.2474701148928\n",
+      "  ave_genome_length : \t 57.75\n",
+      "  ave_tree_depth : \t 8.071428571428571\n",
+      "  ave_tree_nodes : \t 43.857142857142854\n",
+      "  ave_used_codons : \t 28.357142857142858\n",
+      "  best_fitness : \t -2476.5354183914997\n",
       "  gen : \t 1\n",
-      "  invalids : \t 3\n",
-      "  max_genome_length : \t 87\n",
-      "  max_tree_depth : \t 10.0\n",
-      "  max_tree_nodes : \t 76.0\n",
-      "  max_used_codons : \t 52.0\n",
-      "  min_genome_length : \t 22\n",
-      "  min_tree_depth : \t 6.0\n",
-      "  min_tree_nodes : \t 22.0\n",
-      "  min_used_codons : \t 15.0\n",
+      "  invalids : \t 7\n",
+      "  max_genome_length : \t 181\n",
+      "  max_tree_depth : \t 12.0\n",
+      "  max_tree_nodes : \t 122.0\n",
+      "  max_used_codons : \t 78.0\n",
+      "  min_genome_length : \t 12\n",
+      "  min_tree_depth : \t 5.0\n",
+      "  min_tree_nodes : \t 18.0\n",
+      "  min_used_codons : \t 11.0\n",
       "  runtime_error : \t 0\n",
       "  time_adjust : \t 0\n",
-      "  time_taken : \t 19.519505500793457\n",
+      "  time_taken : \t 6.995460271835327\n",
       "  total_inds : \t 40\n",
-      "  total_time : \t 44.324681758880615\n",
+      "  total_time : \t 22.23186755180359\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "! python ponyge.py --fitness_function max_fitness_numba --grammar_file btc_ind_numba.pybnf --population_size 20 --generations 1"
+    "! python ponyge.py --fitness_function max_fitness_numba --grammar_file btc_ohlcv_lags_numba.pybnf --population_size 20 --generations 1"
    ]
   },
   {
