not important change

--- a/run.ipynb
+++ b/run.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Start:\t 2024-10-09 10:05:54.397925 \n",
+      "Start:\t 2024-10-09 17:25:09.262947 \n",
       "\n",
       "Warning: Grammar contains unit production for production rule <fc>\n",
       "         Unit productions consume GE codons.\n",
@@ -37,13 +37,8 @@
       "\n",
       "\n",
       "Best:\n",
-      "  Fitness:\t -2476.5354183914997\n",
-      "  Phenotype: open_prices = price_data['open']\n",
-      "close_prices = price_data['close']\n",
-      "high_prices = price_data['high']\n",
-      "low_prices = price_data['low']\n",
-      "volume = price_data['volume']\n",
-      "def fun(open_prices, close_prices, high_prices, low_prices, volume):\n",
+      "  Fitness:\t 404\n",
+      "  Phenotype: def fun(price_data):\n",
       "  import pandas as pd\n",
       "  import numpy as np\n",
       "  from fitness.indicators import numba_indicators\n",
@@ -54,11 +49,12 @@
       "  AVAILABLE_CAPITAL = 700000\n",
       "  TRADE_SIZE = 0.5\n",
       "  MAX_LAG = 5\n",
-      "  buy_idxs, sell_idxs = trading_signals(buy_signal=get_lag(open_prices, lag=4)[MAX_LAG:] <= get_lag(open_prices, lag=3)[MAX_LAG:], sell_signal=get_lag(low_prices, lag=3)[MAX_LAG:] == get_lag(high_prices, lag=1)[MAX_LAG:])\n",
+      "  buy_idxs, sell_idxs = trading_signals(buy_signal=np.log(numba_indicators.delta_intraday_intensity(high=price_data['dog_high'][MAX_LAG:], low=price_data['dog_low'][MAX_LAG:], close=price_data['6e_close'][MAX_LAG:], volume=price_data['tia_volume'][MAX_LAG:])) == np.sqrt(numba_indicators.close_to_close(close=price_data['tia_close'][MAX_LAG:])), sell_signal=(np.log(numba_indicators.intraday_intensity(high=price_data['aapl_high'][MAX_LAG:], low=price_data['tia_low'][MAX_LAG:], close=price_data['gc_close'][MAX_LAG:], volume=price_data['xrp_volume'][MAX_LAG:])) % 0.40) != 0.32)\n",
       "  if len(buy_idxs) == 0 or len(sell_idxs) == 0:\n",
       "    return 999\n",
       "  buy_idxs = np.array(buy_idxs)\n",
       "  sell_idxs = np.array(sell_idxs)\n",
+      "  open_prices = price_data['btc_open']\n",
       "  buy_prices = open_prices[np.isin(np.arange(len(open_prices)), buy_idxs)]\n",
       "  sell_prices = open_prices[np.isin(np.arange(len(open_prices)), sell_idxs)]\n",
       "  if buy_idxs[0] < sell_idxs[0]:\n",
@@ -82,41 +78,43 @@
       "    return 999\n",
       "  avg_drawdown = np.sum(drawdowns[drawdowns!=0]) / len(drawdowns[drawdowns!=0])\n",
       "  fitness = total_pnl / avg_drawdown\n",
+      "  if fitness > 50:\n",
+      "    return 999\n",
       "  if np.isnan(fitness):\n",
       "    return 999\n",
       "  return -fitness\n",
-      "fitness = fun(open_prices, close_prices, high_prices, low_prices, volume)\n",
-      "  Genome: [29144, 20380, 16187, 78671, 78411, 32716, 94261, 75719, 56740, 61537, 75528, 90720, 53507, 88188, 50623, 10790]\n",
+      "fitness = fun(price_data)\n",
+      "  Genome: [83152, 80254, 87910, 73655, 13010, 48531, 40420, 3568, 52752, 91409, 76144, 43468, 39635, 17887, 91931, 11098, 68763, 54498, 31054, 98895, 35893, 89487, 84014, 30649, 98459, 67290, 63710, 77873, 45560, 57994, 37915, 97469, 42257, 40375, 53483, 78127, 42949, 92645, 79499, 154, 25831, 4505, 21781, 50925, 98693, 580, 42764, 88792, 72757, 69823, 27071, 94829]\n",
       "______\n",
       "\n",
-      "  ave_fitness : \t 538.2474701148928\n",
-      "  ave_genome_length : \t 57.75\n",
-      "  ave_tree_depth : \t 8.071428571428571\n",
-      "  ave_tree_nodes : \t 43.857142857142854\n",
-      "  ave_used_codons : \t 28.357142857142858\n",
-      "  best_fitness : \t -2476.5354183914997\n",
+      "  ave_fitness : \t 924.625\n",
+      "  ave_genome_length : \t 65.7\n",
+      "  ave_tree_depth : \t 8.125\n",
+      "  ave_tree_nodes : \t 50.625\n",
+      "  ave_used_codons : \t 34.9375\n",
+      "  best_fitness : \t 404\n",
       "  gen : \t 1\n",
-      "  invalids : \t 7\n",
-      "  max_genome_length : \t 181\n",
-      "  max_tree_depth : \t 12.0\n",
-      "  max_tree_nodes : \t 122.0\n",
-      "  max_used_codons : \t 78.0\n",
-      "  min_genome_length : \t 12\n",
-      "  min_tree_depth : \t 5.0\n",
-      "  min_tree_nodes : \t 18.0\n",
-      "  min_used_codons : \t 11.0\n",
+      "  invalids : \t 5\n",
+      "  max_genome_length : \t 140\n",
+      "  max_tree_depth : \t 9.0\n",
+      "  max_tree_nodes : \t 80.0\n",
+      "  max_used_codons : \t 55.0\n",
+      "  min_genome_length : \t 15\n",
+      "  min_tree_depth : \t 7.0\n",
+      "  min_tree_nodes : \t 31.0\n",
+      "  min_used_codons : \t 22.0\n",
       "  runtime_error : \t 0\n",
       "  time_adjust : \t 0\n",
-      "  time_taken : \t 6.995460271835327\n",
+      "  time_taken : \t 15.353280067443848\n",
       "  total_inds : \t 40\n",
-      "  total_time : \t 22.23186755180359\n",
+      "  total_time : \t 36.952529191970825\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "! python ponyge.py --fitness_function max_fitness_numba --grammar_file btc_ohlcv_lags_numba.pybnf --population_size 20 --generations 1"
+    "! python ponyge.py --fitness_function max_fitness_numba --grammar_file btc_inst_ind_comb_res_numba.pybnf --population_size 20 --generations 1"
    ]
   },
   {
