monte carlo simulation added

--- a/testing_inst_ind_comb_numba.ipynb
+++ b/testing_inst_ind_comb_numba.ipynb
@@ -1017,6 +1017,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Equity curve Monte Carlo simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_mc_results(pnl_list, init_inv, trade_size, n_runs):\n",
+    "\n",
+    "    max_dd_list = []\n",
+    "    profit_list = []\n",
+    "    roi_list = []\n",
+    "    binary_profit_list = []\n",
+    "\n",
+    "    for _ in range(n_runs):\n",
+    "\n",
+    "        temp_pnl_list = np.random.choice(pnl_list, size=len(pnl_list), replace=True)\n",
+    "\n",
+    "        max_dd = get_drawdown(temp_pnl_list)\n",
+    "        max_dd_list.append(max_dd)\n",
+    "\n",
+    "        profit_list.append(np.sum(temp_pnl_list))\n",
+    "        roi_list.append(100 * np.sum(temp_pnl_list) / (init_inv * trade_size))\n",
+    "        is_profit = 1 if np.sum(temp_pnl_list) > 0 else 0\n",
+    "        binary_profit_list.append(is_profit)\n",
+    "\n",
+    "    mc_dict = {}\n",
+    "    mc_dict['median_max_dd'] = np.median(max_dd_list)\n",
+    "    mc_dict['median_profit'] = np.median(profit_list)\n",
+    "    mc_dict['median_return'] = np.median(roi_list)\n",
+    "    mc_dict['return_dd_ratio'] = np.median(roi_list) / np.median(max_dd_list)\n",
+    "    mc_dict['prob_profit'] = np.sum(binary_profit_list) / len(binary_profit_list)\n",
+    "\n",
+    "    return mc_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_mc_performance(data, text_code):\n",
+    "\n",
+    "    bars_per_5week = 7 * 60 * 24 * 5\n",
+    "    n_bars_per_year = 7 * 60 * 24 * 52\n",
+    "\n",
+    "    if data.shape[0] < n_bars_per_year:\n",
+    "        n_bars_per_year = data.shape[0]\n",
+    "\n",
+    "    n_not_worked = 0\n",
+    "    n_total_cases = 0\n",
+    "\n",
+    "    performance_walk_forward_dict = defaultdict(list)\n",
+    "\n",
+    "    for idx in range(0, n_bars_per_year, bars_per_5week):\n",
+    "\n",
+    "        n_total_cases += 1\n",
+    "\n",
+    "        df = data.iloc[idx:idx+bars_per_5week, :]\n",
+    "        df.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "        price_data = {}\n",
+    "        for col in df.columns:\n",
+    "            if col == 'datetime':\n",
+    "                continue\n",
+    "            else:\n",
+    "                price_data[col] = df[col].values\n",
+    "\n",
+    "        try:\n",
+    "            exec_dict = {'price_data': price_data}\n",
+    "            exec(text_code, exec_dict)\n",
+    "            pnl_list = exec_dict['all_arr']\n",
+    "\n",
+    "            init_inv = exec_dict['AVAILABLE_CAPITAL']\n",
+    "            trade_size = exec_dict['TRADE_SIZE']       \n",
+    "\n",
+    "            mc_dict = get_mc_results(pnl_list, init_inv, trade_size, n_runs=10000)\n",
+    "\n",
+    "            performance_walk_forward_dict['median_max_dd'].append(mc_dict['median_max_dd'])\n",
+    "            performance_walk_forward_dict['median_profit'].append(mc_dict['median_profit'])\n",
+    "            performance_walk_forward_dict['median_return'].append(mc_dict['median_return'])\n",
+    "            performance_walk_forward_dict['return_dd_ratio'].append(mc_dict['return_dd_ratio'])\n",
+    "            performance_walk_forward_dict['prob_profit'].append(mc_dict['prob_profit'])\n",
+    "        except:\n",
+    "            n_not_worked += 1\n",
+    "\n",
+    "    mean_perf_dict = defaultdict(list)\n",
+    "    mean_perf_dict['median_drawdown (%)'].\\\n",
+    "        append(np.mean(performance_walk_forward_dict['median_max_dd']))\n",
+    "    mean_perf_dict['median_profit'].\\\n",
+    "        append(np.mean(performance_walk_forward_dict['median_profit']))\n",
+    "    mean_perf_dict['median_ROI (%)'].\\\n",
+    "        append(np.mean(performance_walk_forward_dict['median_return']))\n",
+    "    mean_perf_dict['ratio'].\\\n",
+    "        append(np.mean(performance_walk_forward_dict['return_dd_ratio']))\n",
+    "    mean_perf_dict['prob'].\\\n",
+    "        append(np.mean(performance_walk_forward_dict['prob_profit']))\n",
+    "    \n",
+    "    perf_df = pd.DataFrame(mean_perf_dict)\n",
+    "\n",
+    "    return perf_df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Data loading function"
    ]
   },
@@ -1448,6 +1558,7 @@
     "final_exit_win_pc_df = pd.DataFrame()\n",
     "final_core_win_pc_df = pd.DataFrame()\n",
     "final_perf_df = pd.DataFrame()\n",
+    "final_mc_df = pd.DataFrame()\n",
     "\n",
     "lag_txt = '{i}'\n",
     "\n",
@@ -1535,6 +1646,14 @@
     "\n",
     "    perf_df = pd.concat([temp_signal_df, perf_df], axis=1)\n",
     "    final_perf_df = pd.concat([final_perf_df, perf_df])\n",
+    "\n",
+    "    mc_df = calculate_mc_performance(\n",
+    "        data=df_52w, \n",
+    "        text_code=txt_code\n",
+    "    )\n",
+    "\n",
+    "    mc_df = pd.concat([temp_signal_df, mc_df], axis=1)\n",
+    "    final_mc_df = pd.concat([final_mc_df, mc_df])\n",
     "\n",
     "    strategy_idx += 1"
    ]
@@ -5450,6 +5569,64 @@
     "]['sell'].tolist()\n",
     "\n",
     "print(sell_str_list[3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Showing Monte Carlo simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_mc_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Showing simulation results for strategies that has passed entry and core testing and have positive ROI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc_strategies_list = final_perf_df[\n",
+    "    (final_perf_df['strategy'].isin(core_testing_strategies)) & \n",
+    "    (final_perf_df['ROI (%)'] > 0)\n",
+    "]['strategy']\n",
+    "\n",
+    "final_mc_df[final_mc_df['strategy'].isin(mc_strategies_list)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Showing simulation results for strategies that has passed all tests and have positive ROI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc_strategies_list2 = final_perf_df[\n",
+    "    (final_perf_df['strategy'].isin(core_testing_strategies2)) & \n",
+    "    (final_perf_df['ROI (%)'] > 0)\n",
+    "]['strategy']\n",
+    "\n",
+    "final_mc_df[final_mc_df['strategy'].isin(mc_strategies_list2)]"
    ]
   },
   {
